# todolist-be

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CI_CD_SETUP_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_SCALING_IMPLEMENTATION_STEPS.md  Dockerfile  EMAIL_NOTIFICATIONS_GUIDE.md  NOTIFICATION_QUICKSTART.md  RATE_LIMITING_IMPROVEMENTS.md  README-Custom-Domains.md  README-Docker.md  SECURITY.md  TESTING.md  alembic.ini  doc_db_scaling_strategy.md  docker-compose.yml  maintenance-cron-setup.sh  note.md  postgres-partitioning-analysis.md  pyproject.toml  pytest.ini  quality_check.py  requirements.txt  run_tests.py  test_partitioned_models.py
.github/: CI-EXCEPTIONS.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
app/: celery_app.py  database.py  main.py
app/core/: config.py  dependencies.py  security.py
app/domains/ai/: controller.py  service.py
app/domains/chat/: controller.py  service.py
app/domains/notification/: __init__.py  controller.py
app/domains/project/: __init__.py  controller.py  service.py
app/domains/settings/: __init__.py  controller.py  service.py
app/domains/todo/: controller.py  service.py  service_partitioned.py
app/domains/user/: controller.py  service.py
app/exceptions/: ai.py  base.py  todo.py
app/schemas/: __init__.py  ai.py  base.py  chat.py  project.py  settings.py  todo.py  user.py
app/services/: email_service.py  notification_service.py
app/shared/: pagination.py
app/tasks/: notification_tasks.py
docs/: BRANCH_PROTECTION_SETUP.md  database-scaling-strategy.md  implementation-guide.md  todolist-backend-structure.md  todolist-deployment.mermaid  todolist-diagrams.mermaid  todolist-erd.mermaid  todolist-project-docs.md  todolist-roadmap.md  todolist-sequence.mermaid  todolist-state.mermaid
migrations/: env.py
migrations/scaling/: 004_update_application_models.py
migrations/versions/: 2527aa293847_test_add_new_table.py  579f35d64d3c_add_chat_tables.py  6943386331a2_recreate_missing_table.py  a3577f0d1eb7_add_timezone_support_to_datetime_columns.py
models/: __init__.py  ai_interaction.py  base.py  chat_conversation.py  chat_message.py  file.py  project.py  push_subscription.py  todo.py  todo_partitioned.py  user.py  user_settings.py
nginx/: default.conf  nginx.conf  ssl-default.conf
scripts/: docker-setup.sh  generate-ssl.sh  setup-dev.sh  setup-hosts.sh  setup-partitioning.sh
tests/: conftest.py  factories.py  simple_test.py
tests/api/: __init__.py  test_ai_controller.py  test_project_controller.py  test_settings_controller.py  test_todo_controller.py  test_user_controller.py
tests/e2e/: __init__.py  test_error_handling_workflows.py
tests/integration/: test_database_integration.py  test_project_controller.py  test_service_integration.py  test_todo_controller.py
tests/unit/: __init__.py  test_ai_service.py  test_chat_service.py  test_config.py  test_core_modules.py  test_dependencies.py  test_email_service.py  test_exceptions.py  test_main_app.py  test_notification_service.py  test_pagination.py  test_project_service.py  test_security.py  test_settings_service.py  test_todo_service.py  test_user_service.py
